Bug 30749 - stap --sign-module doesn't sign the module, as one would expect
Summary: stap --sign-module doesn't sign the module, as one would expect
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: translator (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-08-12 18:07 UTC by Frank Ch. Eigler
Modified: 2023-08-12 19:02 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed:
Project(s) to access:
ssh public key:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Ch. Eigler 2023-08-12 18:07:14 UTC
https://bugzilla.redhat.com/2231619
Comment 1 Frank Ch. Eigler 2023-08-12 19:02:32 UTC
commit 9839db5514a29cf4f58b3de8cc6155088be6d061 (HEAD -> master, origin/master, origin/HEAD)
gpg: Signature made Sat 12 Aug 2023 02:49:26 PM EDT
gpg:                using RSA key 5D38116FA4D3A7CC77E378D37E83610126DCC2E8
gpg: Good signature from "Frank Ch. Eigler <fche@elastic.org>" [ultimate]
Author: Frank Ch. Eigler <fche@redhat.com>
Date:   Sat Aug 12 14:28:44 2023 -0400

    PR30749: correct stap --sign-module timing